@@ -1,4 +1,5 @@
 [SNAPSHOT]
+ * Support response in gzip.
  * Update Facebook API v2.2 -> v2.5
 
 [2.2.0]
